added the .env.example and update the test file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       run: docker-compose version
 
     - name: Copy .env.example to .env
-      run: cp ./1-integration-test/.env.example ./1-integration-test/.env
+      run: cp ./intigrationtest/.env.example ./intigrationtest/.env
 
     - name: Run integration script
-      run: cd 1-integration-test && npm run test:integration
+      run: npm run test:integration
