--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Set up Docker Compose
-      uses: docker/setup-qemu-action@v2
+    - name: Verify Docker
+      run: docker version
 
-    - name: Ensure Docker Compose is available
-      run: docker-compose version
+    - name: Verify Docker Compose
+      run: docker compose version
 
     - name: Copy .env.example to .env
       run: cp ./intigrationtest/.env.example ./intigrationtest/.env
