--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       run: docker compose version
 
     - name: Copy .env.example to .env
-      run: cp ./intigrationtest/.env.example ./intigrationtest/.env
+      run: cp ./.env.example ./.env
 
     - name: Run integration script
       run: npm run test:integration
