--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Set up Docker Compose
+      uses: docker/setup-qemu-action@v2
+
     - name: Verify Docker
       run: docker version
 
@@ -27,6 +30,7 @@ jobs:
 
     - name: Copy .env.example to .env
       run: cp ./.env.example ./.env
+    
 
     - name: Run integration script
       run: npm run test:integration
